get rid of issue with imports error on test

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,11 +7,20 @@
 			"problemMatcher": [
 				"$tsc"
 			],
+			"group": "build",
+			"label": "tsc: build - src/tsconfig.json"
+		},
+		{
+			"type": "typescript",
+			"tsconfig": "tsconfig.json",
+			"problemMatcher": [
+				"$tsc"
+			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
 			},
-			"label": "tsc: build - src/tsconfig.json"
+			"label": "tsc: build - tsconfig.json"
 		}
 	]
 }
