--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES6",
         "module": "commonjs",
         "sourceMap": false,
-        "outDir": "../dist",
+        "outDir": "./dist",
         "noImplicitAny": true,
         "noEmitOnError": true,
         "strictNullChecks": true,
@@ -16,6 +16,10 @@
     },
     "exclude": [
         "node_modules"
+    ],
+    "include": [
+        "src/**/*",
+        "src/*"
     ],
     "esModuleInterop": true
 }
