--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs",
-        "sourceMap": false,
+        "sourceMap": true,
         "outDir": "./dist",
         "noImplicitAny": true,
         "noEmitOnError": true,
